[project]
name = "pushover"
version = "0.1.1"
description = "A Python library for sending messages to Pushover."
readme = "README.md"
authors = [
    { name = "lawtj", email = "41483192+lawtj@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
]

[project.scripts]
pushover = "pushover:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
